tests/baselines/reference/iterableArrayPattern28.errors.txt
tests/cases/conformance/es6/destructuring/iterableArrayPattern28.ts(2,24): error TS2769: No overload matches this call.
  Overload 1 of 3, '(iterable: Iterable<readonly [string, number]>): Map<string, number>', gave the following error.
    Argument of type '([string, number] | [string, boolean])[]' is not assignable to parameter of type 'Iterable<readonly [string, number]>'.
      The types of '[Symbol.iterator]().next' are incompatible between these types.
        Type '{ (this: Iterator<[string, number] | [string, boolean], any, void>, ...args: [] | [undefined]): IteratorResult<[string, number] | [string, boolean], any>; (args_0: undefined): IteratorResult<[string, number] | [string, boolean], any>; }' is not assignable to type '{ (this: Iterator<readonly [string, number], any, void>, ...args: [] | [undefined]): IteratorResult<readonly [string, number], any>; (args_0: undefined): IteratorResult<readonly [string, number], any>; }'.
          The 'this' types of each signature are incompatible.
            Type 'Iterator<readonly [string, number], any, void>' is not assignable to type 'Iterator<[string, number] | [string, boolean], any, void>'.
              Types of property 'next' are incompatible.
                Type '{ (this: Iterator<readonly [string, number], any, void>, ...args: [] | [void]): IteratorResult<readonly [string, number], any>; (args_0: void): IteratorResult<readonly [string, number], any>; }' is not assignable to type '{ (this: Iterator<[string, number] | [string, boolean], any, void>, ...args: [] | [void]): IteratorResult<[string, number] | [string, boolean], any>; (args_0: void): IteratorResult<[string, number] | [string, boolean], any>; }'.
                  The 'this' types of each signature are incompatible.
                    Type 'Iterator<[string, number] | [string, boolean], any, void>' is not assignable to type 'Iterator<readonly [string, number], any, void>'.
                      The types returned by 'next(...)' are incompatible between these types.
                        Type 'IteratorResult<[string, number] | [string, boolean], any>' is not assignable to type 'IteratorResult<readonly [string, number], any>'.
                          Type 'IteratorYieldResult<[string, number] | [string, boolean]>' is not assignable to type 'IteratorResult<readonly [string, number], any>'.
                            Type 'IteratorYieldResult<[string, number] | [string, boolean]>' is not assignable to type 'IteratorYieldResult<readonly [string, number]>'.
                              Type '[string, number] | [string, boolean]' is not assignable to type 'readonly [string, number]'.
                                Type '[string, boolean]' is not assignable to type 'readonly [string, number]'.
  Overload 2 of 3, '(entries?: readonly (readonly [string, number])[]): Map<string, number>', gave the following error.
    Type 'true' is not assignable to type 'number'.


==== tests/cases/conformance/es6/destructuring/iterableArrayPattern28.ts (1 errors) ====
    function takeFirstTwoEntries(...[[k1, v1], [k2, v2]]: [string, number][]) { }
    takeFirstTwoEntries(...new Map([["", 0], ["hello", true]]));
                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   Overload 1 of 3, '(iterable: Iterable<readonly [string, number]>): Map<string, number>', gave the following error.
!!! error TS2769:     Argument of type '([string, number] | [string, boolean])[]' is not assignable to parameter of type 'Iterable<readonly [string, number]>'.
!!! error TS2769:       The types of '[Symbol.iterator]().next' are incompatible between these types.
!!! error TS2769:         Type '{ (this: Iterator<[string, number] | [string, boolean], any, void>, ...args: [] | [undefined]): IteratorResult<[string, number] | [string, boolean], any>; (args_0: undefined): IteratorResult<[string, number] | [string, boolean], any>; }' is not assignable to type '{ (this: Iterator<readonly [string, number], any, void>, ...args: [] | [undefined]): IteratorResult<readonly [string, number], any>; (args_0: undefined): IteratorResult<readonly [string, number], any>; }'.
!!! error TS2769:           The 'this' types of each signature are incompatible.
!!! error TS2769:             Type 'Iterator<readonly [string, number], any, void>' is not assignable to type 'Iterator<[string, number] | [string, boolean], any, void>'.
!!! error TS2769:               Types of property 'next' are incompatible.
!!! error TS2769:                 Type '{ (this: Iterator<readonly [string, number], any, void>, ...args: [] | [void]): IteratorResult<readonly [string, number], any>; (args_0: void): IteratorResult<readonly [string, number], any>; }' is not assignable to type '{ (this: Iterator<[string, number] | [string, boolean], any, void>, ...args: [] | [void]): IteratorResult<[string, number] | [string, boolean], any>; (args_0: void): IteratorResult<[string, number] | [string, boolean], any>; }'.
!!! error TS2769:                   The 'this' types of each signature are incompatible.
!!! error TS2769:                     Type 'Iterator<[string, number] | [string, boolean], any, void>' is not assignable to type 'Iterator<readonly [string, number], any, void>'.
!!! error TS2769:                       The types returned by 'next(...)' are incompatible between these types.
!!! error TS2769:                         Type 'IteratorResult<[string, number] | [string, boolean], any>' is not assignable to type 'IteratorResult<readonly [string, number], any>'.
!!! error TS2769:                           Type 'IteratorYieldResult<[string, number] | [string, boolean]>' is not assignable to type 'IteratorResult<readonly [string, number], any>'.
!!! error TS2769:                             Type 'IteratorYieldResult<[string, number] | [string, boolean]>' is not assignable to type 'IteratorYieldResult<readonly [string, number]>'.
!!! error TS2769:                               Type '[string, number] | [string, boolean]' is not assignable to type 'readonly [string, number]'.
!!! error TS2769:                                 Type '[string, boolean]' is not assignable to type 'readonly [string, number]'.
!!! error TS2769:   Overload 2 of 3, '(entries?: readonly (readonly [string, number])[]): Map<string, number>', gave the following error.
!!! error TS2769:     Type 'true' is not assignable to type 'number'.